# activity-tracker

./: Cargo.toml
src/: main.rs
src/cli/: mod.rs
src/data/: mod.rs
src/db/: mod.rs
src/monitor/: browser.rs  mod.rs
src/reports/: mod.rs
src/tracker/: mod.rs
