[package]
name = "productivity_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rusqlite = "0.29"
colored = "2.0"
dirs = "5.0"
cocoa = "0.25"
core-foundation = "0.9"
objc = "0.2"
tokio = { version = "1.35", features = ["full"] }
sysinfo = "0.30"

